force-app/main/default/objects/Author__c/fields/Number_of_Books__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Books__c</fullName>
    <label>Number of Books</label>
    <summaryForeignKey>AuthorsBooks__c.Author__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>