force-app/main/default/objects/Author__c/validationRules/Date_of_Birth_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( Date_of_Birth__c ) &gt;=  YEAR( TODAY() )</errorConditionFormula>
    <errorMessage>Check your date of birth. You can not be born in the future!!</errorMessage>
</ValidationRule>